--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
             /* Used on Col before <a> of first dropdown item */
             .icon-links a { color: white; opacity: 0.6; }
             .icon-links a:hover { color: white; opacity: 1.0; }
-            .icon-links-pos { top: -52px; position: relative; margin-right: 0; }
+            .icon-links-pos { top: -33px; position: relative; margin-right: 0; }
  
-            /* Built in dropdown container */
-            .dropdown-toggle::after { display: none; }
+            .dropdown-toggle::after { display: none; position: relative; }
             .dropdown-menu a { color: #222; opacity: 0.4; background-color: #fff; }
             .dropdown-menu a:hover { color: #222; background-color: #f8f8f8; }
             .dropdown-item:active { background-color: #f8f8f8; }
@@ -190,7 +189,7 @@
                 border-radius: 4px;
             }
 
-            #file-container { height: 315px; overflow-y: scroll; }
+            #file-container { height: 350px; padding-top: 8px; overflow-y: scroll; }
 
             #file { margin-right: 25px; }
             #file .card { width: 100%; background: #ffffff; text-align: center; float: left; position: relative; border-radius: 5px; padding: 0 10px; margin-top: 45px; box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.3); }
@@ -215,10 +214,10 @@
               transition: 0.3s cubic-bezier(0.67, -0.12, 0.45, 1.5);
               box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.3);
             }
-            #file .card .shortcut { height: 40px; margin: 40px auto 0 auto; }
+            #file .card .shortcut { height: 40px; margin: 50px auto 0 auto; }
             #file .card .shortcut i { opacity: 0.6; }
             #file .card .shortcut i:hover { opacity: 1.0; }
-            #file .card h4 { font-size: 1.2em; font-weight: 700; margin-top: 10px; color: #007bff; opacity: 0.8; }
+            #file .card h4 { font-size: 1.2em; font-weight: 700; margin-top: 0px; color: #007bff; opacity: 0.8; }
             #file .card hr { width: 10%; opacity: 0.8; margin: 0px auto; }
             #file .card .descrip1 { margin: 0px; font-size: 0.8em; line-height: 20px; opacity: 0.8; }
             #file .card .descrip2 { margin: 10px 1px 1px 1px; font-size: 0.6em; line-height: 15px; opacity: 0.8; }
@@ -608,7 +607,7 @@
                                     </span>
 
                                     <div class="collapse show" role="tabpanel" data-parent="#accordion" id="filemanager-body">
-                                        <div class="card-body">
+                                        <div class="card-body trim">
                                         	<div class="row">
                                                 <div class="col icon-links icon-links-pos" id="filemanager-menu-sm">
                                                     <a href="#" class="dropdown-toggle ml-3" data-toggle="dropdown"><i class="fa fa-bars fa-lg fa-fw"></i></a>
